--- a/Rest/webapp/static/css/style.css
+++ b/Rest/webapp/static/css/style.css
@@ -140,11 +140,10 @@ a {
 /* Page Navigation */
 
 #navigation {
-	position: fixed;
+	position: absolute;
 	left: 0;
 	width: 240px;
-	top: 50px;
-	bottom: 0;
+	top: 0px;
 	background: #303B4A;
 	padding: 30px 0px;
 	font-weight: 300;
@@ -383,11 +382,15 @@ ul.opinie li {
 }
 
 	.button:hover {
-		background: #363636;
+		background: #444 !important;
 	}
 	
 	.button:focus {
 		background: #1c1c1c;
+	}
+	
+	.button-red {
+		background: rgb(219, 78, 78);
 	}
 
 /* Logowanie */
@@ -471,3 +474,123 @@ ul.opinie li {
 			.login-window-copyright a:hover {
 				color: #27CFC3;
 			}
+			
+			
+	.login-window-error,
+	.error-msg {
+		background: rgb(236, 106, 106);
+		padding: 18px 30px;
+		margin-bottom: 15px;
+		border-radius: 6px;
+		color: #fff;
+	}
+	
+/* Forms */
+
+.form-item {
+	margin-bottom: 10px;
+}
+
+input,
+textarea {
+	width: 300px;
+	padding: 10px 13px;
+	margin-bottom: 15px;
+	font-size: 14px;
+	-webkit-font-smoothing: antialiased;
+	box-sizing: border-box;
+	outline: 0;
+	-webkit-appearance: none;
+	border: 1px solid #eee;
+	border-radius: 3px;
+	transition: all .3s;
+	color: #999;
+}
+
+input[type="submit"] {
+	width: 160px;
+	margin: 0px;
+}
+
+	input[type="submit"]:hover,
+	input[type="submit"]:focus {
+		background-color: #26C3B8;
+		color: #fff;
+		cursor: pointer;
+	}
+	
+	label {
+		color: #777;
+		margin-bottom: 12px;
+		display: block;
+	}
+	
+	.error-msg {
+		border-radius: 4px;
+	}
+	
+	.success-msg {
+		background: rgb(145, 210, 118);
+		padding: 16px 28px;
+		margin-bottom: 15px;
+		border-radius: 4px;
+		color: #fff;
+	}
+	
+/* Tables */
+
+table {
+	font-size: 12px;
+	color: #666;
+	width: 100%;
+	margin-bottom: 15px;
+}
+
+table thead {
+	font-weight: bold;
+	color: #444;
+	font-size: 13px;
+	line-height: 28px;
+}
+
+table td {
+	padding: 4px 8px 4px 8px;
+	border: 1px solid #eee;
+	line-height: 1.35em;
+}
+
+table tr {
+	transition: all .3s;
+}
+
+table tr:hover {
+	background: #fafafa;
+	color: #444;
+}
+
+	table .button {
+		padding: 8px 16px;
+		  font-size: 13px;
+		  -webkit-font-smoothing: subpixel-antialiased;
+		  width: auto;
+		  border-radius: 5px;
+		  margin-left: 7px;
+	}
+	
+	select {
+		  height: 29px;
+		  /* line-height: 29px; */
+		  border-radius: 4px;
+		  background: #fff;
+		  border:1px solid #ECECEC;
+		  outline: none;
+		margin: 6px 0;
+	}
+	
+	.form-item select {
+		width: 300px;
+		height: 40px;
+		font-size: 14px;
+		color: #999;
+		-webkit-font-smoothing: antialiased;
+	}
