--- a/Rest/webapp/static/css/style.css
+++ b/Rest/webapp/static/css/style.css
@@ -37,6 +37,23 @@ h1,h2,h3,h4,h5,h6 {
 	margin-bottom: 20px;
 }
 
+h2 {
+	font-size: 26px;
+}
+
+h3 {
+	font-size: 22px;
+	padding-top: 60px;
+}
+
+p {
+	/*margin-bottom: 20px;*/
+	color: #888;
+	font-size: 15px;
+	max-width: 700px;
+	line-height: 1.36em;
+}
+
 a {
 	text-decoration: none;
 	color: #27CFC3;
@@ -44,7 +61,7 @@ a {
 
 /* Page Header */
 
-#header {
+header {
 	background: #213035;
 	height: 50px;
 	position: fixed;
@@ -55,83 +72,85 @@ a {
 	z-index: 2;
 }
 
-	#header:after {
+	header:after {
 		content: "";
 		clear: both;
 		display: block;
 	}
 
-	#site-logo {
+	header > div:first-child {
 		float: left;
 		padding-left: 25px;
 	}
 	
-		#site-logo h1 {
+		header > div:first-child h1 {
 			color: #fff;
 			font-size: 24px;
 			-webkit-font-smoothing: antialiased;
 		}
 	
-		#site-logo span {
+		header > div:first-child span {
 			color: #26C3B8;
 			font-weight: normal;
 			-webkit-font-smoothing: subpixel-antialiased;
 		}
 	
-	#header-nav {
+	header > div:last-child {
 		float: right;
 		font-weight: 300;
 		font-size: 13px;
 		padding-right: 25px;
 	}
 	
-		#header-nav:after,
-		#header-nav li.user-panel a:after {
+		header > div:last-child:after,
+		header li.user-panel a:after {
 			display: block;
 			content: "";
 			clear: both;
 		}
 	
-	#header-nav li {
+	header li {
 		float: left;
 		list-style: none;
 	}
-		#header-nav li a {
+		header li a {
 			color: #CACACA;
 			display: block;
 			transition: all .3s;
 		}
 		
-		#header-nav li.user-panel a {
+		header li.user-panel a {
 			padding: 0 10px;
 			height: 50px;
 		}
 		
-			#header-nav li a:hover {
+			header li a:hover {
 				background-color: #26C3B8;
 				color: #fff;
 			}
 		
-		#header-nav li.user-panel a > div {
+		header li.user-panel a > div {
 			float: left;
 		}
 		
-		#header-nav li.user-panel .user-avatar {
+		header li.user-panel .user-avatar {
 			border-radius: 100%;
+			-webkit-border-radius: 100%;
+			-moz-border-radius: 100%;
 			width: 36px;
 			height: 36px;
 			margin-top: 7px;
 			margin-right: 12px;
 		}
 		
-		#header-nav li.logout a {
+		header li.logout a {
 			font-size: 18px;
 			padding: 0 10px 0 14px;
 		}
 
 /* Page Content */
 
-#content-wrapper {
+body > div > section {
 	margin-top: 50px;
 	min-height: 600px;
 	position: relative;
@@ -139,7 +158,7 @@ a {
 
 /* Page Navigation */
 
-#navigation {
+section > div:first-child {
 	position: absolute;
 	left: 0;
 	width: 240px;
@@ -150,11 +169,11 @@ a {
 	font-size: 15px;
 }
 
-	#navigation li {
+	section > div:first-child li {
 		list-style: none;
 	}
 	
-	#navigation li a {
+	section > div:first-child li a {
 		padding: 10px 25px;
 		display: block;
 		transition: all .3s;
@@ -162,19 +181,19 @@ a {
 		position: relative;
 	}
 	
-		#navigation li a i {
+		section > div:first-child li a i {
 			opacity: 0.4;
 			font-size: 18px;
 			width: 25px;
 			transition: opacity .3s;
 		}
 	
-	#navigation li a:hover,
-	#navigation li.current-page a {
+	section > div:first-child li a:hover,
+	section > div:first-child li.current-page a {
 		background: #26C3B8;
 	}
 	
-		#navigation li.current-page a:before {
+		section > div:first-child li.current-page a:before {
 			content: "";
 			display: block;
 			width: 0; 
@@ -187,14 +206,14 @@ a {
 			top: 6px;
 		}
 		
-		#navigation li a:hover i,
-		#navigation li.current-page a i {
+		section > div:first-child li a:hover i,
+		section > div:first-child li.current-page a i {
 			opacity: 1;
 		}
 		
 		/* Submenu */
 		
-		#navigation li.has-submenu > a:after {
+		section > div:first-child li.has-submenu > a:after {
 			font-family: FontAwesome;
 			-webkit-font-smoothing: antialiased;
 			content: "\f078";
@@ -205,19 +224,19 @@ a {
 			opacity: 0.85;
 		}
 		
-		#navigation .submenu {
+		section > div:first-child .submenu {
 			margin: 0;
 			background: #242C37;
 			padding: 6px 0;
 		}
 		
-		#navigation .submenu a {
+		section > div:first-child .submenu a {
 			padding-left: 40px;
 		}
 
 /* Page Content */
 
-#content {
+section > div:last-child {
 	padding: 30px 30px 30px 270px;
 }
 
@@ -407,8 +426,18 @@ ul.opinie li {
 	box-sizing: border-box;
 }
 
+	#register-window {
+		width: 400px;
+		margin: 0 auto;
+		margin-top: 50px;
+		height: auto;
+		margin-bottom: 50px;
+	}
+
 	.login-window-inner {
 		border-radius: 7px;
+		-webkit-border-radius: 7px;
+		-moz-border-radius: 7px;
 		background: #fff;
 		box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.06);
 		-moz-box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.06);
@@ -423,7 +452,7 @@ ul.opinie li {
 		
 	}
 	
-	.login-text {
+	.login-input-holder .login-text {
 		width: 100px;
 		padding: 14px 15px;
 		margin-bottom: 15px;
@@ -435,7 +464,11 @@ ul.opinie li {
 		border: 1px solid #eee;
 		width: 100%;
 		border-radius: 3px;
+		-webkit-border-radius: 3px;
+		-moz-border-radius: 3px;
 		transition: all .3s;
+		-webkit-transition: all .3s;
+		-moz-transition: all .3s;
 		color: #999;
 	}
 	
@@ -482,8 +515,14 @@ ul.opinie li {
 		padding: 18px 30px;
 		margin-bottom: 15px;
 		border-radius: 6px;
+		-webkit-border-radius: 6px;
+		-moz-border-radius: 6px;
 		color: #fff;
 	}
+	
+		.login-window-error ul {
+			margin-bottom: 0px;
+		}
 	
 /* Forms */
 
@@ -505,6 +544,8 @@ textarea {
 	-webkit-appearance: none;
 	border: 1px solid #eee;
 	border-radius: 3px;
+	-webkit-border-radius: 3px;
+	-moz-border-radius: 3px;
 	transition: all .3s;
 	color: #999;
 }
@@ -532,8 +573,11 @@ input[type="submit"] {
 		display: block;
 	}
 	
-	.error-msg {
+	.error-msg,
+	.success-msg {
 		border-radius: 4px;
+		-webkit-border-radius: 4px;
+		-moz-border-radius: 4px;
 	}
 	
 	.success-msg {
